# SetLog

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yaml  main.py  makefile  pyproject.toml  requirements-ci.txt  requirements-dev.txt  requirements-prod.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: 8b7c432af9a7_initial_migration.py
models/: __init__.py  base.py  exercise.py  program.py  session.py  supporting.py  user.py
scripts/db_scripts/: setup_database.py
scripts/db_scripts/db_population/: populate_database.py  verify_data.py
scripts/db_scripts/db_population/data/: exercises.json  programs.json  users.json
tests/: test_stub.py
